--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-homepage
+<!DOCTYPE html>
+<html>
+<head>
+<title>josh abe</title>
+  <link rel="stylesheet" href="style.css">
+  
+</head>
+
+<body>
+<div class="bio" >
+  <div class="profile"></div>
+  <h2 >
+    my name is josh,<br> and i like to make things that are <span>beautiful</span> and <span>useful.</span>
+  </h2>
+  <p>i love simplicity and efficiency, and i'm obsessed with details. i can't help but notice when things are unorganized or difficult, and i'm passionate about making things better.</p>
+</div>
+</body>
+
+</html>
