--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
 <head>
 <title>josh abe</title>
-  <link rel="stylesheet" href="style.css">
-  
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>  
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+  <div id="main-container">
+
+    <a class="logo" href="/"><img src="img/logo.png"/></a>
+
 <div class="bio" >
   <div class="profile"></div>
   <h2 >
@@ -14,6 +20,26 @@
   </h2>
   <p>i love simplicity and efficiency, and i'm obsessed with details. i can't help but notice when things are unorganized or difficult, and i'm passionate about making things better.</p>
 </div>
+
+<div class="sixty">
+  <p>
+    I graduated from design school in 2008 and got a job at an agency designing and building websites in Flash. I then spent a year at a small software startup doing UI design, front-end development, and motion graphics.
+</p>
+<p>
+In February of 2010 I started as an interaction designer on the eCommerce team at Lowe's, supporting sales funnel and authenticated products, doing user research and ideation, as well as a design system refresh. I also learned a lot of valuable lessons about tools and processes as a member of the first scrum team to implement an agile process and design sprints.
+</p>
+<p>
+After Lowe’s I spent 9 months at TIAA-CREF as an interaction designer on the new UX team, supporting internal products for financial advisors.
+</p>
+<p>
+In February of 2014, I started at Ally Financial as a senior information architect on the UX team, building wireframes and prototypes for auto, investing, banking, and insurance products. I also spent a few months as an inaugural team member at Ally’s innovation lab, TM Studio.
+</p>
+<p>
+In August of 2018 I started my current role as Design Ops Manager at Ally, managing the design system and style guide, implementing processes and tools to help the UX team work efficiently and consistently, and driving standardization for design, development, and product teams across the enterprise.
+  </p>
+</div>
+</div>
+
 </body>
 
 </html>
