--- a/principles.html
+++ b/principles.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-<div id-="main-container">
+<div id="main-container">
+
+    <a class="logo" href="/"><img src="img/logo.png"/></a>
+
     <h2>Ten Design Principles</h2>
 
 <p>Over the course of my career, I’ve noticed patterns in how people work, how organizations function, and how design work gets done. Once I started picking up on these patterns, I started writing things down. After a while I had collected ten principles.</p>
